--- a/css/styles.css
+++ b/css/styles.css
@@ -71,10 +71,10 @@ img {
 
 /*============= Header ==========*/
 .header {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
 }
-
 .header .container {
   display: flex;
   align-items: center;
@@ -83,13 +83,16 @@ img {
 .header .logo {
   margin-right: 92px;
 }
-
-.header .address {
-  margin-left: auto;
+.logo {
+  font-family: var(--secondary-font);
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: #000000;
 }
-
-.header-mail {
-  margin-right: 50px;
+.logo-accent {
+  color: #2196f3;
 }
 
 .navigation {
@@ -105,50 +108,48 @@ img {
   margin-right: 50px;
 }
 
-.logo {
-  font-family: var(--secondary-font);
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-
-.logo-accent {
-  color: #2196f3;
-}
-
-.navigation-menu-link {
+.navigation-menu-link,
+.address {
   font-family: var(--main-font);
   font-weight: 500;
+  margin-left: auto;
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
   color: var(--accent-color);
 }
-
-.navigation-menu-link.is-curent {
-  color: #2196f3;
+.navigation-menu-link,
+.header-address-contact {
+  display: inline-block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .navigation-menu-link:hover,
 .navigation-menu-link:focus,
-.header-tel:hover,
-.header-mail:focus,
-.header-mail:hover {
+.header-address-contact:hover,
+.header-address-contact:focus {
   color: #2196f3;
 }
-
-.header-tel,
-.header-mail {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.02em;
+.navigation-menu-link.is-current {
+  color: #2196f3;
+}
+.header .address {
+  display: flex;
+}
+.header-address-contact {
+  display: flex;
+  align-items: center;
+  font-style: normal;
   color: #757575;
 }
-
+.header-address-contact:not(:last-child) {
+  margin-right: 28px;
+}
+.header-address-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
 /*============= End Header ==========*/
 
 /*============= Hero ===========*/
@@ -292,8 +293,8 @@ img {
 .workers-content {
   padding-top: 32px;
   padding-bottom: 32px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   background: #ffffff;
@@ -330,6 +331,7 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
 .social-list-link {
   display: flex;
   justify-content: center;
@@ -337,11 +339,15 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: #ffffff;
+  color: #afb1b8;
 }
+
 .social-list-icon {
   width: 20px;
   height: 20px;
+}
+.social-list-icon {
+  fill: #afb1b8;
 }
 .social-list-link:hover,
 .social-list-link:focus {
@@ -357,6 +363,7 @@ img {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 .costumers-list {
   display: flex;
   justify-content: space-between;
@@ -370,18 +377,15 @@ img {
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
+  color: #afb1b8;
+}
+.costumers-list-icon {
+  fill: currentColor;
 }
 .costumers-list-link:hover,
 .costumers-list-link:focus {
-  background-color: #fff;
-}
-.costumer-list-link:hover .costumer-list-icon,
-.costumer-list-link:focus .costumer-list-icon {
-  fill: #ffffff;
-}
-.costumers-list-icon:hover,
-.costumers-list-icon:focus {
-  background-color: #2196f3;
+  color: #2196f3;
+  border-color: #2196f3;
 }
 
 /*============= End Main ===========*/
@@ -391,7 +395,13 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
+.footer > .container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-address-container {
+  margin-right: 70px;
+}
 .footer {
   background-color: #2f303a;
 }
@@ -431,16 +441,47 @@ img {
   color: rgba(255, 255, 255, 0.6);
   display: block;
 }
+
+.footer-slogan {
+  display: inline-block;
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+  display: inline-block;
+}
+.footer-social-list {
+  display: flex;
+}
+.footer-social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-social-icon {
+  fill: #ffffff;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #2196f3;
+  outline: none;
+}
 /*============= End Footer==========*/
 
 /*=============Portfolio==========*/
-.header {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #ececec;
-}
 
 .section-portfolio > .container {
   padding-top: 94px;
