--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ img {
 }
 
 .benefits-list-item:not(:last-child) {
-  margin-right: 70px;
+  margin-right: 30px;
 }
 
 .benefits-list-title {
@@ -288,23 +288,23 @@ img {
 }
 .workers-list-item {
   margin-bottom: 94px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
 }
 .workers-content {
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 30px;
   padding-right: 30px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  background: #ffffff;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background-color: #ffffff;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
 }
-.workers-photo {
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-}
-
 .workers-name {
   font-family: var(--main-font);
   font-weight: 500;
