--- a/css/styles.css
+++ b/css/styles.css
@@ -290,20 +290,21 @@ img {
   margin-bottom: 94px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
-}
-.workers-content {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 30px;
-  padding-right: 30px;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   background-color: #ffffff;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
+  overflow: hidden;
+}
+
+.workers-content {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .workers-name {
   font-family: var(--main-font);
